Code improvements again.